--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://samnoon1971.github.io/Calculator/",
+  "homepage": "https://samnoon1971.github.io/Calculator",
   "devDependencies": {
     "chai": "^4.2.0",
     "gh-pages": "^2.2.0",
@@ -13,6 +13,8 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "big.js": "^5.2.2",
+    "github-fork-ribbon-css": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
